# 2DGameEngine

./: .gitignore  README.md  TODO.txt
src/: CMakeLists.txt  b  main.cpp
src/Dependencies/glad/include/glad/: glad.h
src/Dependencies/glad/src/: glad.c
src/engine/: main.cpp
src/engine/gfx/: raw_model.cpp  raw_model.h  shader.cpp  shader.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.h  texture_2d.cpp  texture_2d.h  window.cpp  window.h
src/engine/include/gfx/: sprite_renderer.h  window.h
src/engine/include/le/gfx/: shader.h  sprite_renderer.h  window.h
src/engine/include/le/logic/: application.h
src/engine/include/le/tools/: delegate.h  event_manager.h  input.h  loader.h  maths.h  timer.h
src/engine/include/logic/: lost_engine.h
src/engine/include/tools/: log.h
src/engine/res/shaders/: light_sprite.fs  light_sprite.vs  sprite.fs  sprite.vs
src/engine/src/gfx/: shader.cpp  sprite.cpp  sprite_renderer.cpp  text_renderer.cpp  texture_2d.cpp  window.cpp
src/engine/src/logic/: lost_engine.cpp
src/engine/src/tools/: event_manager.cpp  input.cpp  loader.cpp  timer.cpp
src/engine/tools/: loader.cpp  loader.h  log.h  maths.cpp  maths.h
